src/test/deca/syntax/invalid/testExtend3.deca
// test Invalid extend
// Result : Error
// Multiple extends
class C extends D extends E{

}
